# kestra-pipelines

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
flow/: bitcoin_flow.yml
flows/: bitcoin_flow.yml  scrapper_mercadolivre_flow.yml
src/: app.py
src/flow/: kestra_flow.yml
src/scripts/: bitcoin.py  scrapper.py
